--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,8 @@
+<div id="nav">
+  <h1>CashTrack</h1>
+  </div>
+<section id="signUp">
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -32,3 +37,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</section>
