--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,12 +1,6 @@
-<div id="<%= dom_id group %>">
+<div id="groupPack">
+  <img src="<%= group.icon %>">
   <p>
-    <strong>Name:</strong>
     <%= group.name %>
   </p>
-
-  <p>
-    <strong>Icon:</strong>
-    <%= group.icon %>
-  </p>
-
 </div>
