--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,7 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Este es mi logooooooo</h1>
+<section id="landing">
+<h1>CashTrack</h1>
 
 
 <%= link_to "Sign In", new_user_session_path %>
-<%= link_to "Sign Up", new_user_registration_path %>
+<p>Want to check your outgoings?</p>
+<%= link_to "Sign Up!", new_user_registration_path %>
+
+</section>
