--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,10 @@
+<div id="nav">
+  <h1>CashTrack</h1>
+  <%= link_to "Transactions", entities_path%>
+  <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+</div>
+
+<section id="groupNew">
 <h1>New group</h1>
 
 <%= render "form", group: @group %>
@@ -7,3 +14,4 @@
 <div>
   <%= link_to "Back to groups", groups_path %>
 </div>
+</section>
