--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,42 @@
 <p style="color: green"><%= notice %></p>
+<div id="nav">
+  <h1>CashTrack</h1>
+  <%= link_to "Transactions", entities_path%>
+  <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+</div>
 
+<section id="groupIndex">
+
+<%groupSum = 0 %>
+<h1>SHOW</H1>
 <%= render @group %>
+<table>
+    <tr>
+      <td><strong>Transaction</strong></td>
+      <td><strong>Amount</strong></td>
+      <td><strong>Date</strong></td>
+    </tr>  
+<%@entities.each do |entities|%>
 
+  <%if entities.group_id == @group.id%>
+  <% groupSum += entities.amount%>
+    <tr>
+       <td><%= entities.name %></td>
+
+       <td><%= entities.amount %></td>
+
+       <td><%= entities.created_at %></td>
+    </tr>
+  <%end%>
+
+<%end%>
+</table>
+<h3>Category total amount: <%=groupSum%></h3>
 <div>
-  <%= link_to "Edit this group", edit_group_path(@group) %> |
+
   <%= link_to "Back to groups", groups_path %>
 
   <%= button_to "Destroy this group", @group, method: :delete %>
 </div>
+
+</section>
